# OpenAudio

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/OpenDAW/: CMakeLists.txt
applications/OpenDAW/include/: CMakeLists.txt  LiveScrollingAudioVisualiser.h  MainWindowContent.h
applications/OpenDAW/source/: CMakeLists.txt
applications/OpenEQ/: CMakeLists.txt
applications/OpenEQ/include/: CMakeLists.txt  MainWindowContent.h
applications/OpenEQ/source/: CMakeLists.txt  OpenEQ.cpp
applications/OpenPluginHost/: CMakeLists.txt  CustomStandalone.cpp  CustomStandaloneApp.cpp  CustomStandaloneApp.h  CustomStandaloneFilterWindow.h  CustomStandaloneMain.cpp  ParametricEqualiserProcessor.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
applications/OpenPluginHost/include/: CMakeLists.txt
applications/OpenPluginHost/source/: CMakeLists.txt  OpenPluginHost.cpp
docs/: cmake.md  git.md  setup.md  setup.md.bak
examples/: CMakeLists.txt
examples/equalizer/: CMakeLists.txt
examples/equalizer/include/: AudioInputDebugView.h  AudioInputListener.h  AudioSettingsComponent.h  DebugComponent.h  EqualizerEditor.h  MainComponent.h  MainMenuComponent.h
examples/equalizer/source/: AudioSettingsComponent.cpp  DebugComponent.cpp  EqualizerEditor.cpp  EqualizerProcessor.cpp  LiveScrollingAudioDisplay.cpp  Main.cpp  MainComponent.cpp  MenuComponent.cpp
juce-install/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenAudio.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
juce-install/examples/equalizer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EQUALIZER_EXAMPLE.slnx  EQUALIZER_EXAMPLE.vcxproj  EQUALIZER_EXAMPLE.vcxproj.filters  EQUALIZER_EXAMPLE_rc_lib.vcxproj  EQUALIZER_EXAMPLE_rc_lib.vcxproj.filters
juce-install/examples/equalizer/EQUALIZER_EXAMPLE_artefacts/JuceLibraryCode/: Info.txt
juce-install/examples/equalizer/EQUALIZER_EXAMPLE_artefacts/JuceLibraryCode/Debug/: Defs.txt
juce-install/examples/equalizer/EQUALIZER_EXAMPLE_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
juce-install/source/applications/OpenDAW/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenDAW.slnx  OpenDAW.vcxproj  OpenDAW.vcxproj.filters  OpenDAW_rc_lib.vcxproj  OpenDAW_rc_lib.vcxproj.filters
juce-install/source/applications/OpenDAW/OpenDAW_artefacts/JuceLibraryCode/: Info.txt
juce-install/source/applications/OpenEQ/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenEQ.slnx  OpenEQ.vcxproj  OpenEQ.vcxproj.filters  OpenEQ_rc_lib.vcxproj  OpenEQ_rc_lib.vcxproj.filters
juce-install/source/applications/OpenEQ/OpenEQ_artefacts/JuceLibraryCode/: Info.txt
juce-install/source/applications/OpenLookAndFeel/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  OpenLookAndFeel.slnx  OpenLookAndFeel.vcxproj  OpenLookAndFeel.vcxproj.filters  OpenLookAndFeel_rc_lib.vcxproj  OpenLookAndFeel_rc_lib.vcxproj.filters
juce-install/source/applications/OpenLookAndFeel/OpenLookAndFeel_artefacts/JuceLibraryCode/: Info.txt
modules/: CMakeLists.txt
modules/openaudio.config/: CMakeLists.txt
modules/openaudio.core/: openaudio.core.h
modules/openaudio.eq/: CMakeLists.txt
modules/openaudio_core/: openaudio_core.h
modules/openaudio_eq/: CMakeLists.txt  openaudio_eq.cpp  openaudio_eq.h
modules/openaudio_eq/include/: Analyser.h
modules/openaudio_eq/source/: ParametricEqualiserProcessor.cpp
modules/openaudio_lookandfeel/: openaudio_lookandfeel.cpp
modules/openaudio_lookandfeel/lookandfeel/: openaudio_LookAndFeel.h
modules/patterns/: CMakeLists.txt
source/: CMakeLists.txt
source/OpenDAW/: CMakeLists.txt
source/OpenDAW/include/: MainWindowContent.h  ParametricEqualiserEditer.h  ParametricEqualiserProcessor.h
source/OpenDAW/source/: ParametricEqualiserEditor.cpp  ParametricEqualiserProcessor.cpp
source/applications/EvilDAW/: CMakeLists.txt
source/applications/EvilDAW/include/: AudioSettingsComponent.h  CMakeLists.txt  MainWindowContent.h
source/applications/EvilDAW/source/: CMakeLists.txt  EvilDAW.cpp
source/applications/EvilEQ/: CMakeLists.txt
source/applications/EvilEQ/source/: CMakeLists.txt  EvilEQApplication.cpp
source/applications/EvilLookAndFeel/: CMakeLists.txt
source/applications/EvilLookAndFeel/include/: CMakeLists.txt
source/applications/EvilLookAndFeel/include/content/: MainWindowContent.h
source/applications/EvilLookAndFeel/source/: CMakeLists.txt  EvilLookAndFeelApplication.cpp
source/applications/OpenDAW/: CMakeLists.txt
source/applications/OpenDAW/include/: CMakeLists.txt
source/applications/OpenDAW/source/: OpenDAW.cpp
source/applications/OpenEQ/: CMakeLists.txt
source/applications/OpenEQ/source/: CMakeLists.txt  OpenEQApplication.cpp
source/applications/OpenLookAndFeel/: CMakeLists.txt
source/applications/OpenLookAndFeel/include/: CMakeLists.txt
source/applications/OpenLookAndFeel/include/content/: MainWindowContent.h
source/applications/OpenLookAndFeel/source/: CMakeLists.txt  OpenLookAndFeelApplication.cpp
source/examples/equalizer/: CMakeLists.txt
source/examples/equalizer/include/: EqualizerProcessor.h  LiveScrollingAudioDisplay.h  MainMenuModel.h
source/examples/equalizer/source/: AudioInputDebugView.cpp  AudioInputListener.cpp  DebugComponent.cpp  Main.cpp  MainComponent.cpp
source/modules/: CMakeLists.txt
source/modules/evilaudio_eq/: evilaudio_eq.cpp  evilaudio_eq.h
source/modules/evilaudio_eq/eq/: Analyser.h
source/modules/evilaudio_lookandfeel/: evilaudio_lookandfeel.cpp  evilaudio_lookandfeel.h
source/modules/evilaudio_lookandfeel/lookandfeel/: evilaudio_LookAndFeel.cpp  evilaudio_LookAndFeel.h
source/modules/openaudio_eq/: openaudio_eq.cpp
source/modules/openaudio_eq/eq/: ParametricEqualiserEditor.cpp  ParametricEqualiserEditor.h  ParametricEqualiserProcessor.h
source/modules/openaudio_lookandfeel/: openaudio_lookandfeel.h
source/modules/openaudio_lookandfeel/lookandfeel/: openaudio_LookAndFeel.cpp
source/plugins/EvilEQPlugin/: CMakeLists.txt
source/plugins/OpenEQPlugin/: CMakeLists.txt  OpenEQPlugin.cpp
(+6 files in other folders)
